2020-09-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Fix missing include, patch #354 by Tim Stahlhut.

2020-09-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Minor code quality improvements, patch #353 by Tim Stahlhut.
	  
2020-09-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve use of bool hl instruction for zeroing.
	* src/stm8/gen.c:
	  Fix handling of 24-bit return values, patch by Tim Stahlhut.
	* src/stm8/peep.c:
	  Fix a bug in handling 24-bit return values in notUsed().

2020-09-07 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/clean.mk:
	  Fix clean target for sdasstm8, patch #350 by Tim Stahlhut.
	* src/Makefile.in:
	  Fix C++ linker flags, patch by Mike Jagdis.

2020-08-30 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Remove mention of Rabbit 4000, since it is currently supported in Rabbit 300 compability mode only.
	  
2020-08-28 Sergey Belyashov <sergey.belyashov@gmail.com>

	* support/regression/tests/memory.c:
	  Apply patch #334: Enhanced regression testing for memmove()

2020-08-28 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sdas/asz80/z80mch.c,
	  sdas/asz80/z80pst.c:
	  Implement RFE#656: add barrel shifts and jp (c) instruction support.

2020-08-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/gcc-torture-execute-20040409-1.c:
	* support/regression/tests/gcc-torture-execute-20040409-2.c:
	* support/regression/tests/gcc-torture-execute-20040409-3.c:
	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c:
	* support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_auto_yx.c:
	* support/regression/tests/mm-pnvi-ae-udi-provenance_basic_using_uintptr_t_global_yx.c:
	  Disabled for clang-6.0 and below.

2020-08-27 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/gbz80/Makefile.in,
	  device/lib/gbz80/crt0_rle.s: crt0_rle.s renamed to __initrleblock.s
	* src/z80/gen.c,
	  src/z80/peep.c,