@@ -1,3 +1,10 @@
+2020-09-15 Sergey Belyashov <sergey.belyashov@gmail.com>
+
+	* src/SDCCval.c,
+	  src/SDCCval.h,
+	  src/z80/gen.c:
+	  Fix bug #3104.
+
 2020-09-13 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCerr.c:
